2024/17/parser/aoc_parser.go
// Code generated from AOC.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // AOC

import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type AOCParser struct {
	*antlr.BaseParser
}

var AOCParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func aocParserInit() {
  staticData := &AOCParserStaticData
  staticData.LiteralNames = []string{
    "", "'\\n'", "'Register '", "': '", "'Program: '", "','", "'0'", "'1'", 
    "'2'", "'3'", "'4'", "'5'", "'6'", "'7'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "ID", "INTEGER", 
    "DIGIT",
  }
  staticData.RuleNames = []string{
    "program", "registers", "register", "instructions", "instruction", "adv", 
    "bxl", "bst", "jnz", "bxc", "out", "bdv", "cdv", "operand", "literal_value", 
    "reg_a", "reg_b", "reg_c",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// AOCParserInit initializes any static state used to implement AOCParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAOCParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AOCParserInit() {
  staticData := &AOCParserStaticData
  staticData.once.Do(aocParserInit)
}

// NewAOCParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAOCParser(input antlr.TokenStream) *AOCParser {
	AOCParserInit()
	this := new(AOCParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &AOCParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "AOC.g4"

	return this
}


// AOCParser tokens.
const (
	AOCParserEOF = antlr.TokenEOF
	AOCParserT__0 = 1
	AOCParserT__1 = 2
	AOCParserT__2 = 3
	AOCParserT__3 = 4
	AOCParserT__4 = 5
	AOCParserT__5 = 6
	AOCParserT__6 = 7
	AOCParserT__7 = 8
	AOCParserT__8 = 9
	AOCParserT__9 = 10
	AOCParserT__10 = 11
	AOCParserT__11 = 12
	AOCParserT__12 = 13
	AOCParserID = 14
	AOCParserINTEGER = 15
	AOCParserDIGIT = 16
)

// AOCParser rules.
const (
	AOCParserRULE_program = 0
	AOCParserRULE_registers = 1
	AOCParserRULE_register = 2
	AOCParserRULE_instructions = 3
	AOCParserRULE_instruction = 4
	AOCParserRULE_adv = 5
	AOCParserRULE_bxl = 6
	AOCParserRULE_bst = 7
	AOCParserRULE_jnz = 8
	AOCParserRULE_bxc = 9
	AOCParserRULE_out = 10
	AOCParserRULE_bdv = 11
	AOCParserRULE_cdv = 12
	AOCParserRULE_operand = 13
	AOCParserRULE_literal_value = 14
	AOCParserRULE_reg_a = 15
	AOCParserRULE_reg_b = 16
	AOCParserRULE_reg_c = 17
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Registers() IRegistersContext
	Instructions() IInstructionsContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Registers() IRegistersContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegistersContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegistersContext)
}

func (s *ProgramContext) Instructions() IInstructionsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionsContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitProgram(s)
	}
}




func (p *AOCParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AOCParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.Registers()
	}
	{
		p.SetState(37)
		p.Match(AOCParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(38)
		p.Instructions()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IRegistersContext is an interface to support dynamic dispatch.
type IRegistersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllRegister() []IRegisterContext
	Register(i int) IRegisterContext

	// IsRegistersContext differentiates from other interfaces.
	IsRegistersContext()
}

type RegistersContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRegistersContext() *RegistersContext {
	var p = new(RegistersContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_registers
	return p
}

func InitEmptyRegistersContext(p *RegistersContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_registers
}

func (*RegistersContext) IsRegistersContext() {}

func NewRegistersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RegistersContext {
	var p = new(RegistersContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_registers

	return p
}

func (s *RegistersContext) GetParser() antlr.Parser { return s.parser }

func (s *RegistersContext) AllRegister() []IRegisterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegisterContext); ok {
			len++
		}
	}

	tst := make([]IRegisterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegisterContext); ok {
			tst[i] = t.(IRegisterContext)
			i++
		}
	}

	return tst
}

func (s *RegistersContext) Register(i int) IRegisterContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterContext)
}

func (s *RegistersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RegistersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *RegistersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterRegisters(s)
	}
}

func (s *RegistersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitRegisters(s)
	}
}




func (p *AOCParser) Registers() (localctx IRegistersContext) {
	localctx = NewRegistersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AOCParserRULE_registers)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == AOCParserT__1 {
		{
			p.SetState(40)
			p.Register()
		}
		{
			p.SetState(41)
			p.Match(AOCParserT__0)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IRegisterContext is an interface to support dynamic dispatch.
type IRegisterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	INTEGER() antlr.TerminalNode

	// IsRegisterContext differentiates from other interfaces.
	IsRegisterContext()
}

type RegisterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRegisterContext() *RegisterContext {
	var p = new(RegisterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_register
	return p
}

func InitEmptyRegisterContext(p *RegisterContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_register
}

func (*RegisterContext) IsRegisterContext() {}

func NewRegisterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RegisterContext {
	var p = new(RegisterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_register

	return p
}

func (s *RegisterContext) GetParser() antlr.Parser { return s.parser }

func (s *RegisterContext) ID() antlr.TerminalNode {
	return s.GetToken(AOCParserID, 0)
}

func (s *RegisterContext) INTEGER() antlr.TerminalNode {
	return s.GetToken(AOCParserINTEGER, 0)
}

func (s *RegisterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RegisterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *RegisterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterRegister(s)
	}
}

func (s *RegisterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitRegister(s)
	}
}




func (p *AOCParser) Register() (localctx IRegisterContext) {
	localctx = NewRegisterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AOCParserRULE_register)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(AOCParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(AOCParserID)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(AOCParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(51)
		p.Match(AOCParserINTEGER)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IInstructionsContext is an interface to support dynamic dispatch.
type IInstructionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllInstruction() []IInstructionContext
	Instruction(i int) IInstructionContext

	// IsInstructionsContext differentiates from other interfaces.
	IsInstructionsContext()
}

type InstructionsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionsContext() *InstructionsContext {
	var p = new(InstructionsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_instructions
	return p
}

func InitEmptyInstructionsContext(p *InstructionsContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_instructions
}

func (*InstructionsContext) IsInstructionsContext() {}

func NewInstructionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionsContext {
	var p = new(InstructionsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_instructions

	return p
}

func (s *InstructionsContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionsContext) AllInstruction() []IInstructionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInstructionContext); ok {
			len++
		}
	}

	tst := make([]IInstructionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInstructionContext); ok {
			tst[i] = t.(IInstructionContext)
			i++
		}
	}

	return tst
}

func (s *InstructionsContext) Instruction(i int) IInstructionContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *InstructionsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *InstructionsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterInstructions(s)
	}
}

func (s *InstructionsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitInstructions(s)
	}
}




func (p *AOCParser) Instructions() (localctx IInstructionsContext) {
	localctx = NewInstructionsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AOCParserRULE_instructions)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(AOCParserT__3)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(54)
		p.Instruction()
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == AOCParserT__4 {
		{
			p.SetState(55)
			p.Match(AOCParserT__4)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(56)
			p.Instruction()
		}


		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Adv() IAdvContext
	Bxl() IBxlContext
	Bst() IBstContext
	Jnz() IJnzContext
	Bxc() IBxcContext
	Out() IOutContext
	Bdv() IBdvContext
	Cdv() ICdvContext

	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_instruction
	return p
}

func InitEmptyInstructionContext(p *InstructionContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_instruction
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) Adv() IAdvContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAdvContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAdvContext)
}

func (s *InstructionContext) Bxl() IBxlContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBxlContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBxlContext)
}

func (s *InstructionContext) Bst() IBstContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBstContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBstContext)
}

func (s *InstructionContext) Jnz() IJnzContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJnzContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJnzContext)
}

func (s *InstructionContext) Bxc() IBxcContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBxcContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBxcContext)
}

func (s *InstructionContext) Out() IOutContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOutContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOutContext)
}

func (s *InstructionContext) Bdv() IBdvContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBdvContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBdvContext)
}

func (s *InstructionContext) Cdv() ICdvContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICdvContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICdvContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *InstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterInstruction(s)
	}
}

func (s *InstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitInstruction(s)
	}
}




func (p *AOCParser) Instruction() (localctx IInstructionContext) {
	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, AOCParserRULE_instruction)
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case AOCParserT__5:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(62)
			p.Adv()
		}


	case AOCParserT__6:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(63)
			p.Bxl()
		}


	case AOCParserT__7:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(64)
			p.Bst()
		}


	case AOCParserT__8:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(65)
			p.Jnz()
		}


	case AOCParserT__9:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(66)
			p.Bxc()
		}


	case AOCParserT__10:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(67)
			p.Out()
		}


	case AOCParserT__11:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(68)
			p.Bdv()
		}


	case AOCParserT__12:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(69)
			p.Cdv()
		}



	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}


errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IAdvContext is an interface to support dynamic dispatch.
type IAdvContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Operand() IOperandContext

	// IsAdvContext differentiates from other interfaces.
	IsAdvContext()
}

type AdvContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAdvContext() *AdvContext {
	var p = new(AdvContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_adv
	return p
}

func InitEmptyAdvContext(p *AdvContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_adv
}

func (*AdvContext) IsAdvContext() {}

func NewAdvContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AdvContext {
	var p = new(AdvContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_adv

	return p
}

func (s *AdvContext) GetParser() antlr.Parser { return s.parser }

func (s *AdvContext) Operand() IOperandContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperandContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperandContext)
}

func (s *AdvContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AdvContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *AdvContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterAdv(s)
	}
}

func (s *AdvContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitAdv(s)
	}
}




func (p *AOCParser) Adv() (localctx IAdvContext) {
	localctx = NewAdvContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, AOCParserRULE_adv)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Match(AOCParserT__5)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(73)
		p.Match(AOCParserT__4)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(74)
		p.Operand()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IBxlContext is an interface to support dynamic dispatch.
type IBxlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Operand() IOperandContext

	// IsBxlContext differentiates from other interfaces.
	IsBxlContext()
}

type BxlContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBxlContext() *BxlContext {
	var p = new(BxlContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_bxl
	return p
}

func InitEmptyBxlContext(p *BxlContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_bxl
}

func (*BxlContext) IsBxlContext() {}

func NewBxlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BxlContext {
	var p = new(BxlContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AOCParserRULE_bxl

	return p
}

func (s *BxlContext) GetParser() antlr.Parser { return s.parser }

func (s *BxlContext) Operand() IOperandContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperandContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperandContext)
}

func (s *BxlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BxlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *BxlContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.EnterBxl(s)
	}
}

func (s *BxlContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AOCListener); ok {
		listenerT.ExitBxl(s)
	}
}




func (p *AOCParser) Bxl() (localctx IBxlContext) {
	localctx = NewBxlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, AOCParserRULE_bxl)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Match(AOCParserT__6)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(77)
		p.Match(AOCParserT__4)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(78)
		p.Operand()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IBstContext is an interface to support dynamic dispatch.
type IBstContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Operand() IOperandContext

	// IsBstContext differentiates from other interfaces.
	IsBstContext()
}

type BstContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBstContext() *BstContext {
	var p = new(BstContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_bst
	return p
}

func InitEmptyBstContext(p *BstContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AOCParserRULE_bst
}

func (*BstContext) IsBstContext() {}
